--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul class="nav-list">
                 <li onclick="navbarActive1(this)"><a class="active" id="option1" href="#start">Home</a></li>
                 <li onclick="navbarActive2(this)"><a id="option2" href="#history">History</a></li>
-                <li><a id="option3" class="recovery">Recovery</a></li>
+                <li><a id="option3" class="recovery" href="#recovery">Recovery</a></li>
             </ul>
         </nav>
     </header>
