--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RecoverPassword</title>
+    <title>TurPyun RI</title>
 
     <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa|PT+Mono" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@600&family=Inter:wght@300&family=Open+Sans:wght@300&family=Poppins:wght@300;400;500;600;700&family=Quicksand:wght@700&family=Roboto+Mono:wght@300;400&family=Roboto:wght@300;400;700&display=swap"
+        rel="stylesheet">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,6 +20,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/animations.css">
 </head>
 
 <body class="scrollBody">
@@ -28,55 +33,45 @@
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
-            <ul class="nav-list">
-                <li onclick="navbarActive1(this)"><a class="active" id="option1" href="#start">Home</a></li>
-                <li onclick="navbarActive2(this)"><a id="option2" href="#history">History</a></li>
-                <li onclick="recovery(this)"><a id="option3" href="#recovery" class="recovery">Recovery</a></li>
+            <ul id="navBarList" class="nav-list">
+                <li onclick="navbarActive1(this)"><a id="option1" class="active" href="#content">Home</a></li>
+                <li onclick="navbarActive2(this)"><a id="option2" href="#about">History</a></li>
+                <li onclick="navbarActive3(this)"><a id="option3" class="recovery" href="">Recovery</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="start">
-        <div class="content">
-            <h2>Slaughterhouse</h2>
-        </div>
+    <!-- Slaughterhouse -->
+    <section>
+        <video id="background" autoplay loop>
+            <source src="./video/game.mp4">
+        </video>
     </section>
 
-    <div class="history" id="history">
-        <div class="image">
-            <img src="img/MagnifyingGlass.png" alt="">
+    <div id="content">
+        <div id="title" class="title animationTitleTop">
+            <h1>TurPyun RI</h1>
+            <p>Text to test the background</p>
         </div>
-        <div class="text">
-            <h1>History</h1>
-            <p>This is a story set in the fictional city of Sant’Angelo, an old, yet relatively stable settlement in the
-                East Coast of the United States of America. You usually perform your duties alongside John, your mentor
-                and leader of the agency, who hand-picked you out of several candidates given your potential.<br><br>
 
-                Most days come and go with relatively few noteworthy occasions: an arrest here and there, some shocking
-                discoveries and a few happy endings. While some at the agency would label these days “boring”, you find
-                them at least interesting.<br><br>
+        <div id="about" class="about">
+            <div class="text">
+                <h1 class="animationTitleLeft">About TurPyun RI</h1>
+                <p class="animation">TurPyun RI is a non-profit company that produces action, adventure and
+                    other types of games.<br>
+                    Our aim is to bring the fun of gaming to everyone. Soon we will launch a new game called
+                    Slaughterhouse and many others in the near future.<br><br>
+                </p>
 
-                This uneventfulness continues until one fateful day, when you’re given a case that could very well
-                change your life forever... <span>or end it altogether.</span>
-            </p>
-        </div>
-    </div>
-
-    <div id="modal-recovery" class="modal-container">
-        <div class="modal-frame">
-            <button class="clouse">x</button>
-            <h3 class="title">Recover Password</h3>
-            <form>
-                <input type="text" class="input" placeholder="Email">
-                <input type="button" class="button" value="Recover Password">
-            </form>
+                <h4>Come have fun with us!</h4>
+            </div>
         </div>
     </div>
 
     <script src="./js/navbarActive.js"></script>
     <script src="./js/mobile-navbar.js"></script>
     <script src="./js/scroll-navbar.js"></script>
-    <script src="./js/open-modal.js"></script>
+    <script src="./js/animations.js"></script>
 </body>
 
 </html>
