Modifying the navbar links

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
                 <div class="line3"></div>
             </div>
             <ul id="navBarList" class="nav-list">
-                <li onclick="navbarActive1(this)"><a id="option1" class="active" href="#content">Home</a></li>
-                <li onclick="navbarActive2(this)"><a id="option2" href="#about">History</a></li>
+                <li onclick="navbarActive1(this)"><a id="option1" class="active"
+                        href="https://shoffya.github.io/RI-Slaughterhouse/#content">Home</a></li>
+                <li onclick="navbarActive2(this)"><a id="option2"
+                        href="https://shoffya.github.io/RI-Slaughterhouse/#about">History</a></li>
                 <li onclick="navbarActive3(this)"><a id="option3" class="recovery" href="">Recovery</a></li>
             </ul>
         </nav>
