--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                         href="https://shoffya.github.io/RI-Slaughterhouse/#content">Home</a></li>
                 <li onclick="navbarActive2(this)"><a id="option2"
                         href="https://shoffya.github.io/RI-Slaughterhouse/#about">History</a></li>
-                <li onclick="navbarActive3(this)"><a id="option3" class="recovery" href="">Recovery</a></li>
+                <li onclick="navbarActive3(this)"><a id="option3" class="recovery"
+                        href="https://shoffya.github.io/RI-Slaughterhouse/#about">Recovery</a></li>
             </ul>
         </nav>
     </header>
