--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- Slaughterhouse -->
     <section>
-        <video id="background" autoplay loop>
+        <video id="background" autoplay="true" loop="true">
             <source src="./video/game.mp4">
         </video>
     </section>
