--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 <div class="line3"></div>
             </div>
             <ul id="navBarList" class="nav-list">
-                <li class="link1"><a id="option1" class="active"
+                <li onclick="navbarActive1(this)"><a id="option1" class="active"
                         href="https://shoffya.github.io/RI-Slaughterhouse/#content">Home</a></li>
-                <li class="link2"><a id="option2" href="https://shoffya.github.io/RI-Slaughterhouse/#about">History</a>
-                </li>
-                <li class="link3"><a id="option3" class="recovery"
+                <li onclick="navbarActive2(this)"><a id="option2"
+                        href="https://shoffya.github.io/RI-Slaughterhouse/#about">History</a></li>
+                <li onclick="navbarActive3(this)"><a id="option3" class="recovery"
                         href="https://shoffya.github.io/RI-Slaughterhouse/#about">Recovery</a></li>
             </ul>
         </nav>
