--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                 <h4>Come have fun with us!</h4>
             </div>
         </div>
+
+        <div id="title" class="title2 animationTitleTop">
+            <h1>TESTE</h1>
+            <p>Text to test the background</p>
+        </div>
     </div>
 
     <script src="./js/navbarActive.js"></script>
