--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
 
-        <div id="title" class="title2 animationTitleTop">
+        <div id="title2" class="title animationTitleTop">
             <h1>TESTE</h1>
             <p>Text to test the background</p>
         </div>
