--- a/index.html
+++ b/index.html
@@ -34,12 +34,9 @@
                 <div class="line3"></div>
             </div>
             <ul id="navBarList" class="nav-list">
-                <li onclick="navbarActive1(this)"><a id="option1" class="active"
-                        href="https://shoffya.github.io/RI-Slaughterhouse/#content">Home</a></li>
-                <li onclick="navbarActive2(this)"><a id="option2"
-                        href="https://shoffya.github.io/RI-Slaughterhouse/#about">History</a></li>
-                <li onclick="navbarActive3(this)"><a id="option3" class="recovery"
-                        href="https://shoffya.github.io/RI-Slaughterhouse/#about">Recovery</a></li>
+                <li onclick="navbarActive1(this)"><a id="option1" class="active" href="#content">Home</a></li>
+                <li onclick="navbarActive2(this)"><a id="option2" href="#about">History</a></li>
+                <li onclick="navbarActive3(this)"><a id="option3" class="recovery" href="#title2">Recovery</a></li>
             </ul>
         </nav>
     </header>
