--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- Slaughterhouse -->
     <section>
-        <video id="background" autoplay="true" loop="true">
+        <video id="background" autoplay loop>
             <source src="./video/game.mp4">
         </video>
     </section>
