--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Slaughterhouse -->
     <section>
         <video id="background" autoplay loop>
-            <source src="./video/game.mp4">
+            <source src="./video/game.mp4" type="video/mp4">
         </video>
     </section>
 
