--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- Slaughterhouse -->
     <section>
-        <video id="background" autoplay loop>
+        <video id="background" autoplay muted loop>
             <source src="./video/game.mp4" type="video/mp4">
         </video>
     </section>
