--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
                 <div class="line3"></div>
             </div>
             <ul id="navBarList" class="nav-list">
-                <li onclick="navbarActive1(this)"><a id="option1" class="active" href="#content">Home</a></li>
-                <li onclick="navbarActive2(this)"><a id="option2" href="#about">History</a></li>
-                <li onclick="navbarActive3(this)"><a id="option3" class="recovery" href="#title2">Recovery</a></li>
+                <li><a id="option1" class="active" href="#content">Home</a></li>
+                <li><a id="option2" href="#about">History</a></li>
+                <li><a id="option3" class="recovery" href="#title2">Recovery</a></li>
+
+                <!-- onclick="navbarActive1(this)" -->
+                <!-- onclick="navbarActive2(this)" -->
+                <!-- onclick="navbarActive3(this)" -->
             </ul>
         </nav>
     </header>
