--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
             <ul id="navBarList" class="nav-list">
                 <li><a id="option1" class="active" href="">Home</a>
                 </li>
-                <li><a id="option2" href="https://shoffya.github.io/RI-Slaughterhouse/#about">History</a></li>
-                <li><a id="option3" class="recovery"
-                        href="https://shoffya.github.io/RI-Slaughterhouse/#title2">Recovery</a></li>
+                <li><a id="option2" href="#about">History</a></li>
+                <li><a id="option3" class="recovery" href="#title2">Recovery</a></li>
 
                 <!-- onclick="navbarActive1(this)" -->
                 <!-- onclick="navbarActive2(this)" -->
