--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         </div>
     </div>
 
-    <!-- <script src="./js/navbarActive.js"></script> -->
+    <script src="./js/navbarActive.js"></script>
     <script src="./js/mobile-navbar.js"></script>
     <script src="./js/scroll-navbar.js"></script>
-    <script src="./js/animations.js"></script>
+    <!-- <script src="./js/animations.js"></script> -->
 </body>
 
 </html>
