--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="line3"></div>
             </div>
             <ul id="navBarList" class="nav-list">
-                <li><a id="option1" href="#content">Home</a></li>
+                <li><a id="option1" class="active" href="#content">Home</a></li>
                 <li><a id="option2" href="#about">History</a></li>
                 <li><a id="option3" class="recovery" href="#title2">Recovery</a></li>
             </ul>
