--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
                 <div class="line3"></div>
             </div>
             <ul id="navBarList" class="nav-list">
-                <li><a id="option1" class="active" href="https://shoffya.github.io/RI-Slaughterhouse/#content">Home</a>
+                <li><a id="option1" class="active" href="">Home</a>
                 </li>
-                <li><a id="option2" href="https://shoffya.github.io/RI-Slaughterhouse/#about">History</a></li>
-                <li><a id="option3" class="recovery"
-                        href="https://shoffya.github.io/RI-Slaughterhouse/#title2">Recovery</a></li>
+                <li><a id="option2" href="">History</a></li>
+                <li><a id="option3" class="recovery" href="">Recovery</a></li>
             </ul>
         </nav>
     </header>
