--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul id="navBarList" class="nav-list">
                 <li><a id="option1" class="active" href="#content">Home</a></li>
                 <li><a id="option2" href="#about">History</a></li>
-                <li><a id="option3" clss="recovery" href="#title2">Recovery</a></li>
+                <li><a id="option3" class="recovery" href="#title2">Recovery</a></li>
             </ul>
         </nav>
     </header>
