--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <div class="line3"></div>
             </div>
             <ul id="navBarList" class="nav-list">
-                <li><a id="option1" href="#content">Home</a></li>
-                <li><a id="option2" href="#about">History</a></li>
-                <li><a id="option3" class="recovery" href="#title2">Recovery</a></li>
+                <li><a id="option1" href="#home">Home</a></li>
+                <li><a id="option2" href="#about">About</a></li>
+                <li><a id="option3" class="recovery" href="#recovery">Recovery</a></li>
             </ul>
         </nav>
     </header>
@@ -50,8 +50,8 @@
         </video>
     </section>
 
-    <div id="content">
-        <div id="title" class="title animationTitleTop">
+    <div id="home">
+        <div id="home" class="home animationTitleTop">
             <h1>TurPyun RI</h1>
             <p>Text to test the background</p>
         </div>
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div id="title2" class="title2 animationTitleTop">
+        <div id="recovery" class="recovery animationTitleTop">
             <h1>TESTE</h1>
             <p>Text to test the background</p>
         </div>
