testing the links

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
 
     <div id="home">
-        <div id="home" class="home animationTitleTop">
+        <div id="homeStart" class="home animationTitleTop">
             <h1>TurPyun RI</h1>
             <p>Text to test the background</p>
         </div>
