--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div id="recovery" class="recovery animationTitleTop">
+        <div id="recovery" class="recoveryP animationTitleTop">
             <h1>TESTE</h1>
             <p>Text to test the background</p>
         </div>
