--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul id="navBarList" class="nav-list">
                 <li><a id="option1" href="#content">Home</a></li>
                 <li><a id="option2" href="#about">History</a></li>
-                <li><a id="option3" class="recovery" href="#title2">Recovery</a></li>
+                <li><a id="option3" class="recovery" href="#recoverPassword">Recovery</a></li>
             </ul>
         </nav>
     </header>
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div id="title2" class="title2 animationTitleTop">
+        <div id="recoverPassword" class="recoverPassword animationTitleTop">
             <h1>TESTE</h1>
             <p>Text to test the background</p>
         </div>
