--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <div class="line3"></div>
             </div>
             <ul id="navBarList" class="nav-list">
-                <li><a id="option1" href="#content">Home</a></li>
-                <li><a id="option2" href="#about">History</a></li>
+                <li><a id="option1" href="#home">Home</a></li>
+                <li><a id="option2" href="#about">About</a></li>
                 <li><a id="option3" class="recovery" href="#recoverPassword">Recovery</a></li>
             </ul>
         </nav>
@@ -50,8 +50,8 @@
         </video>
     </section>
 
-    <div id="content">
-        <div id="title" class="title animationTitleTop">
+    <div id="home">
+        <div id="homeStart" class="homeStart animationTitleTop">
             <h1>TurPyun RI</h1>
             <p>Text to test the background</p>
         </div>
