creating password recovery div

--- a/index.html
+++ b/index.html
@@ -70,8 +70,13 @@
         </div>
 
         <div id="recoverPassword" class="recoverPassword animationTitleTop">
-            <h1>TESTE</h1>
-            <p>Text to test the background</p>
+            <div class="form">
+                <h3 class="caption">Type Your Email</h3>
+                <form>
+                    <input type="text" class="email" placeholder="Email">
+                    <input type="button" class="button" value="Recover">
+                </form>
+            </div>
         </div>
     </div>
 
