creating password recovery div

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             </div>
         </div>
 
-        <div id="recoverPassword" class="recoverPassword animationTitleTop">
-            <div class="form">
+        <div id="recoverPassword" class="recoverPassword">
+            <div class="form animationTitleTop">
                 <h3 class="caption">Type Your Email</h3>
                 <form>
                     <input type="text" class="email" placeholder="Email">
