--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div id="recoverPassword" class="recoverPassword">
+        <dv id="recoverPassword" class="recoverPassword">
             <div class="form animationTitleTop">
                 <h3 class="caption">Type Your Email</h3>
                 <form>
@@ -77,7 +77,7 @@
                     <input type="button" class="button" value="Recover">
                 </form>
             </div>
-        </div>
+    </div>
     </div>
 
     <script src="./js/navbarActive.js"></script>
