creating password recovery div

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div id="recoverPassword" class="recoverPassword">
             <div class="form animationTitleTop">
                 <h3 class="caption">Type Your Email</h3>
-                <form>
+                <form class="animation">
                     <input type="text" class="email" placeholder="Email">
                     <input type="button" class="button" value="Recover">
                 </form>
