creating password recovery div

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
         <div id="recoverPassword" class="recoverPassword">
             <div class="form animationTitleTop">
-                <h3 class="caption">Type Your Email</h3>
-                <form class="animation">
+                <h3 class="caption animation">Type Your Email</h3>
+                <form>
                     <input type="text" class="email" placeholder="Email">
                     <input type="button" class="button" value="Recover">
                 </form>
