testing email link

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <div class="form animationTitleTop">
                 <h3 class="caption animation">Type Your Email</h3>
                 <form>
-                    <input type="text" class="email" placeholder="Email">
-                    <input type="button" class="button" value="Recover">
+                    <input id="email" type="text" class="email" placeholder="Email">
+                    <input id="button" type="button" class="button" value="Recover">
                 </form>
             </div>
         </div>
