--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <script src="./js/navbarActive.js"></script>
     <script src="./js/mobile-navbar.js"></script>
     <script src="./js/scroll-navbar.js"></script>
-    <!-- <script src="./js/animations.js"></script> -->
+    <script src="./js/email.js"></script>
 </body>
 
 </html>
