testing email link

--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
         </nav>
     </header>
 
-    <!-- asdasd -->
-
     <!-- Slaughterhouse -->
     <section>
         <video id="background" autoplay muted loop>
@@ -73,8 +71,9 @@
             <div class="form animationTitleTop">
                 <h3 class="caption animation">Type Your Email</h3>
                 <form>
-                    <input id="email" type="text" class="email" placeholder="Email">
-                    <input id="button" type="button" class="button" value="Recover">
+                    <input type="text" class="email" placeholder="Email">
+                    <a class="button"
+                        href="mailto:email@provedor.com.br?subject=Assunto do email&cc=copia@provedor.com.br&bcc=copiaoculta@provedor.com.br&body=Conteúdo do email que será preenchido automaticamente">Recover</a>
                 </form>
             </div>
         </div>
@@ -83,7 +82,6 @@
     <script src="./js/navbarActive.js"></script>
     <script src="./js/mobile-navbar.js"></script>
     <script src="./js/scroll-navbar.js"></script>
-    <script src="./js/email.js"></script>
 </body>
 
 </html>
