testing email link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <form>
                     <input type="text" class="email" placeholder="Email">
                     <a class="button"
-                        href="mailto:email@provedor.com.br?subject=Assunto do email&cc=copia@provedor.com.br&bcc=copiaoculta@provedor.com.br&body=Conteúdo do email que será preenchido automaticamente">Recover</a>
+                        href="mailto:turpyun.rigames@gmail.com?subject=TESTE&cc=inguinha.fenandes@gmail.com&body=Testando o botão de enviar senha nova">Recover</a>
                 </form>
             </div>
         </div>
