testing email link

--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
             <div class="form animationTitleTop">
                 <h3 class="caption animation">Type Your Email</h3>
                 <form>
-                    <input type="text" class="email" placeholder="Email">
-                    <a class="button"
-                        href="mailto:turpyun.rigames@gmail.com?subject=TESTE&cc=inguinha.fenandes@gmail.com&body=Testando o botão de enviar senha nova">Recover</a>
+                    <input type="email" class="email" placeholder="Email">
+                    <input type="button" class="button">Recover</input>
                 </form>
             </div>
         </div>
