testing email link

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <div class="form animationTitleTop">
                 <h3 class="caption animation">Type Your Email</h3>
                 <form>
-                    <input type="email" class="email" placeholder="Email">
-                    <input type="button" class="button">Recover</input>
+                    <input id="email" type="email" class="email" placeholder="Email">
+                    <button type="submit" class="button">Recover</button>
                 </form>
             </div>
         </div>
@@ -81,6 +81,7 @@
     <script src="./js/navbarActive.js"></script>
     <script src="./js/mobile-navbar.js"></script>
     <script src="./js/scroll-navbar.js"></script>
+    <script src="./js/email.js"></script>
 </body>
 
 </html>
