--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <script src="./js/navbarActive.js"></script>
     <script src="./js/mobile-navbar.js"></script>
     <script src="./js/scroll-navbar.js"></script>
-    <script src="./js/email.js"></script>
+    <script src="./js/emailLink.js"></script>
 </body>
 
 </html>
