testing email link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h3 class="caption animation">Type Your Email</h3>
                 <form>
                     <input id="email" type="email" class="email" placeholder="Email">
-                    <button type="submit" class="button">Recover</button>
+                    <input type="submit" class="button" value="Recover">
                 </form>
             </div>
         </div>
