--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="form animationTitleTop">
                 <h3 class="caption animation">Type Your Email</h3>
                 <form>
-                    <input id="email" type="email" class="email" placeholder="Email">
+                    <input id="email" type="text" class="email" placeholder="Email">
                     <input type="submit" class="button" value="Recover">
                 </form>
             </div>
