Modifying the support tab layout

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <div id="supportService" class="supportService">
             <div class="form animationTitleTop">
-                <h3 class="caption animation">Type Your Email</h3>
+                <h3 class="caption animation">Send an email to our support service</h3>
                 <form id="formEmail" action="">
                     <label for="Support">How can we help you?</label>
                     <select id="Support" name="Support">
@@ -81,7 +81,7 @@
                         <label for="Support">Describe the problem in detail:</label>
                         <textarea id="message" name="message" required></textarea>
                     </section>
-                    <input type="button" id="recovery" value="recovery">
+                    <input type="button" id="button" value="button">
                 </form>
             </div>
         </div>
