Modifying the support tab layout

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul id="navBarList" class="nav-list">
                 <li><a id="option1" href="#home">Home</a></li>
                 <li><a id="option2" href="#about">About</a></li>
-                <li><a id="option3" class="recovery" href="#supportService">Support</a></li>
+                <li><a id="option3" href="#supportService">Support</a></li>
             </ul>
         </nav>
     </header>
@@ -78,7 +78,7 @@
                         <option value="Others">Others</option>
                     </select>
                     <section class="message">
-                        <label for="Support">Describe the problem in detail:</label>
+                        <label for="message">Describe the problem in detail:</label>
                         <textarea id="message" name="message" required></textarea>
                     </section>
                     <input type="button" id="button" value="button">
@@ -90,7 +90,7 @@
     <script src="./js/navbarActive.js"></script>
     <script src="./js/mobile-navbar.js"></script>
     <script src="./js/scroll-navbar.js"></script>
-    <script src="./js/formHandler.js"></script>
+    <script src="./js/validatingForm.js"></script>
 </body>
 
 </html>
