modifying the layout of validatingForm

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <div class="form animationTitleTop">
                 <h3 class="caption animation">Send an email to our support service</h3>
                 <form id="formEmail" action="">
-                    <label for="Support">How can we help you?</label>
-                    <select id="Support" name="Support">
+                    <label for="subject">How can we help you?</label>
+                    <select id="subject" name="subject">
                         <option value="passwordRecovery">Password Recovery</option>
                         <option value="gameProblem">Problems with a game</option>
                         <option value="Others">Others</option>
@@ -81,7 +81,7 @@
                         <label for="message">Describe the problem in detail:</label>
                         <textarea id="message" name="message" required></textarea>
                     </section>
-                    <input type="button" id="button" value="Button">
+                    <button id="button"><a class="button" href=""></a></button>
                 </form>
             </div>
         </div>
