modifying the layout of validatingForm

--- a/index.html
+++ b/index.html
@@ -79,9 +79,13 @@
                     </select>
                     <section class="message">
                         <label for="message">Describe the problem in detail:</label>
-                        <textarea id="message" name="message" required></textarea>
+                        <textarea id="message" name="message"></textarea>
                     </section>
-                    <button id="button"><a class="button" href=""></a></button>
+                    <button id="button">
+                        <a class="button" href="">
+                            Submit
+                        </a>
+                    </button>
                 </form>
             </div>
         </div>
