modifying the layout of validatingForm

--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
                         <textarea id="message" name="message"></textarea>
                     </section>
                     <button id="button">
-                        <a class="button" href="">
-                            Submit
-                        </a>
+                        <a class="button" href=""></a>
+                        Submit
                     </button>
                 </form>
             </div>
