modifying the layout of validatingForm

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <div class="form animationTitleTop">
                 <h3 class="caption animation">Send an email to our support service</h3>
                 <form id="formEmail" action="">
-                    <label for="submit">How can we help you?</label>
-                    <select id="submit" name="submit">
+                    <label for="subject">How can we help you?</label>
+                    <select id="subject" name="subject">
                         <option value="passwordRecovery">Password Recovery</option>
                         <option value="gameProblem">Problems with a game</option>
                         <option value="Others">Others</option>
