--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <label for="message">Describe the problem in detail:</label>
                         <textarea id="message" name="message" required></textarea>
                     </section>
-                    <input type="button" id="button" value="Button">
+                    <button id="button"><a class="btnSubmit" href=""></a></button>
                 </form>
             </div>
         </div>
