--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </select>
                     <section class="message">
                         <label for="message">Describe the problem in detail:</label>
-                        <textarea id="message" name="message" required></textarea>
+                        <textarea id="message" name="message"></textarea>
                     </section>
                     <button id="button"><a class="btnSubmit" href=""></a></button>
                 </form>
