testing the form

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <label for="message">Describe the problem in detail:</label>
                         <textarea id="message" name="message"></textarea>
                     </section>
-                    <button id="button"><a class="btnSubmit" href=""></a></button>
+                    <button id="button"><a class="btnSubmit" href="">Submit</a></button>
                 </form>
             </div>
         </div>
