--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
                         <label for="message">Describe the problem in detail:</label>
                         <textarea id="message" name="message"></textarea>
                     </section>
-                    <a id="button" class="btnSubmit" href="" onclick="validatingForm(this)">Submit</a>
+                    <section class="submit">
+                        <a id="button" class="btnSubmit" href="#" onclick="validatingForm()">Submit</a>
+                    </section>
                 </form>
             </div>
         </div>
