testing the form

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <textarea id="message" name="message"></textarea>
                     </section>
                     <section class="submit">
-                        <!-- <a id="button" class="btnSubmit" href="#" onclick="validatingForm()">Submit</a> -->
+                        <a id="button" class="btnSubmit" href="#" onclick="validatingForm()">Submit</a>
                     </section>
                 </form>
             </div>
