testing the form

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                         <label for="message">Describe the problem in detail:</label>
                         <textarea id="message" name="message"></textarea>
                     </section>
-                    <section class="submit">
+                    <!-- <section class="submit">
                         <a id="button" class="btnSubmit" href="#" onclick="validatingForm()">Submit</a>
-                    </section>
+                    </section> -->
                 </form>
             </div>
         </div>
