--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <option value="Others">Others</option>
                     </select>
                     <label id="messageL" for="message">Describe the problem in detail:</label>
-                    <textarea id="message" name="message" data-toggle="tooltip" data-placement="right"
+                    <textarea id="message" name="message" data-bs-toggle="tooltip" data-bs-placement="right"
                         title="Tooltip na parte superior"></textarea>
                     <input type="button" id="submit" value="submit">
                 </form>
