--- a/index.html
+++ b/index.html
@@ -21,14 +21,6 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/animations.css">
-
-    <!-- JavaScript Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
 </head>
 
 <body class="scrollBody">
@@ -86,8 +78,7 @@
                         <option value="Others">Others</option>
                     </select>
                     <label id="messageL" for="message">Describe the problem in detail:</label>
-                    <textarea id="message" name="message" data-bs-toggle="tooltip" data-bs-placement="right"
-                        title="Tooltip na parte superior"></textarea>
+                    <textarea id="message" name="message"></textarea>
                     <input type="button" id="submit" value="submit">
                 </form>
             </div>
@@ -98,11 +89,6 @@
     <script src="./js/mobile-navbar.js"></script>
     <script src="./js/scroll-navbar.js"></script>
     <script src="./js/validatingForm.js"></script>
-    <!-- <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
-    </script> -->
 </body>
 
 </html>
