testing the form

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                     </select>
                     <label id="messageL" for="message">Describe the problem in detail:</label>
                     <textarea id="message" name="message"></textarea>
+                    <div class="alert alert-danger" role="alert">
+                        Um simples alerta danger. Olha só!
+                    </div>
                     <input type="button" id="submit" value="submit">
                 </form>
             </div>
