--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- Bootstrap Icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/animations.css">
@@ -80,7 +83,8 @@
                     <label id="messageL" for="message">Describe the problem in detail:</label>
                     <textarea id="message" name="message"></textarea>
                     <div class="alert alert-danger" role="alert">
-                        Um simples alerta danger. Olha só!
+                        Por favor preencha o campo de menssagem para que a gente possa te ajudar!<i
+                            class="bi bi-exclamation-circle" style="color:brown;"></i>
                     </div>
                     <input type="button" id="submit" value="submit">
                 </form>
