--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         Por favor preencha o campo de menssagem para que a gente possa te ajudar!<i
                             class="bi bi-exclamation-circle" style="color:brown;"></i>
                     </div>
-                    <input type="button" id="submit" value="submit">
+                    <input type="button" id="submit" value="submit" stle="margin-top:50px;">
                 </form>
             </div>
         </div>
